fdo#78782 startcenter: open document on enter key

Change-Id: I501dbd6a0f4e5323a003afbb19707aad67897cd0